Fix overflow in retailers

--- a/prototype/css/styles.css
+++ b/prototype/css/styles.css
@@ -809,11 +809,6 @@ h1.page-header {
 	margin-right: 5px;
 }
 
-.chat .panel-body {
-	overflow-y: scroll;
-	height: 300px;
-}
-
 .chat-body small {
 	margin-left: 5px;
 }
